# applied_ai_challenges

./: README.md  hello.py  pyproject.toml  test.py  week_1_wearable_step_counter.ipynb  week_2_fruits_recognition.ipynb  week_3_wind.ipynb
exportToHTML/: week_1_wearable_step_counter.ipynb.html
playgrounds/: sigmoid_logistic_regression.py
resources/: StepCounter-checkpoint.ipynb  StepCounter.ipynb  StepCounterPerson2-checkpoint.ipynb  femaleWalk.xlsx
schemas/: wind_schema_1.py
