[project]
name = "applied-ai-challenges"
version = "0.1.0"
description = "Weekly challenges for U of Hull Applied AI module"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "numpy",
    "tensorflow>=2.x",
    "pandas",
    "tqdm",
    "plotly",
    "matplotlib",
    "ipython",
    "jupyterlab",
]
